--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -51,6 +51,8 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 
 Observera att kanalnumren som är traditionella och frekvenserna inte kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har särskilda restriktioner på svenskt innanvatten och territorialvatten.
 
+\begin{table}[H]
+\centering
 \begin{tabular}{rlrl}
 	\textbf{Frekvens} & \textbf{Benämning} & \textbf{Effekt} & \textbf{Användningsområde}           \\ \hline
 	          155,400 & Jakt K6            &             5 W & Jakt, Jordbruk, Skogsbruk$^R$        \\
@@ -61,6 +63,8 @@ Observera att kanalnumren som är traditionella och frekvenserna inte kommer hel
 	          155,525 & Jakt K4 VHF-M L2   &             5 W & Jakt, Jordbruk, Skogsbruk Marin$^M$  \\
 	          156,000 & Jakt K5            &             5 W & Jakt, PMR, Friluftskanal$^P$
 \end{tabular}
+\caption{Jakt- och jordbruksfrekvenser 155\,MHz}
+\end{table}
 
 \footnotesize
 \begin{itemize}
