--- a/logbook.tex
+++ b/logbook.tex
@@ -1,8 +1,10 @@
+\pagestyle{empty}
+\newgeometry{left=1cm, right=1cm, top=1cm, bottom=1cm}
 \begin{landscape}
 \section{Logbook}
 \begin{longtable}{|c|c|c|c|c|c|c|c|c|c|}
 	\hline
-	Station  & Datum  & \multicolumn{2}{|c|}{Tid UTC} & Frekvens & Mode & Effekt & \multicolumn{2}{|c|}{Rapport} & Noteringar / QSL mm \\
+	Station  & Datum  & \multicolumn{2}{|c|}{Tid UTC} & Frekvens & Mode & Effekt & \multicolumn{2}{|c|}{Rapport} & Övriga noteringar\hspace{25cm}\\
 	 Signal  & YYMMDD & HHMM &          HHMM          & MHz/kHz  &      & dBm/W  & RX &            TX            &  \\ \hline
 	\endhead &        &      &                        &          &      &        &    &                          &  \\ \hline
 	         &        &      &                        &          &      &        &    &                          &  \\ \hline
@@ -98,7 +100,18 @@
 	         &        &      &                        &          &      &        &    &                          &  \\ \hline
 	         &        &      &                        &          &      &        &    &                          &  \\ \hline
 	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
+	         &        &      &                        &          &      &        &    &                          &  \\ \hline
 
 \end{longtable}
 \end{landscape}
 \clearpage
+\pagestyle{fancy}
