--- a/repeatrar-vhf.tex
+++ b/repeatrar-vhf.tex
@@ -1,5 +1,4 @@
-\begin{landscape}
-
+\scriptsize
 \subsection{Repeatrar, länkar och fyrar VHF/UHF}
 \subsubsection{Svenska fyrar VHF/UHF}
 \begin{longtable}{rlrllrrrc}
@@ -59,7 +58,6 @@ SKØEN/B & Väddö               & 10368.8470 & QRV & JO99JX & 60  & 30  & 10000
 
 
 \subsubsection{Repeatrar distrikt 0}
-\footnotesize
 \begin{longtable}{llllrrlcl}
 	\textbf{Funktion}  & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline
 	\endhead
@@ -125,12 +123,12 @@ Repeater & FM           & SMØWIU/R      & Botkyrka     &          434.8750 &   
 \begin{itemize}
 	\item[$^1$] Öppnas även med DTMF *
 \end{itemize}
-\normalsize
+
 
 \clearpage
 
 \subsubsection{Repeatrar distrikt 1}
-\footnotesize
+
 \begin{longtable}{llllrrlcl}
 \textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access} & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
 Repeater          & FM/C4FM      & SK1BL/R       & Endre	& 145.7750          & -600kHz        & 1750            & QRV             & JO97FO           \\
@@ -138,10 +136,10 @@ Repeater          & FM/C4FM      & SK1BL/R       & Endre	& 145.7750          & -
 %\begin{itemize}
 %	\item[$^1$] Öppnas även med DTMF *
 %\end{itemize}
-\normalsize
+
 
 \subsubsection{Repeatrar distrikt 2}
-\footnotesize
+
 \begin{longtable}{llllrrlcl}
 \textbf{Funktion}                 & \textbf{Typ}  & \textbf{Call} & \textbf{QTH}        & \textbf{Frekvens} & \textbf{Skift} & \textbf{Access}  & \textbf{Status} & \textbf{Locator} \\ \hline \endhead
 
@@ -189,9 +187,9 @@ Repeater & FM     & SK2HG/R6  & Överkalix          & 145.7500 & -600kHz & 1750 
 \begin{itemize}
 	\item[$^1$] Öppnas även med DTMF 3
 \end{itemize}
-\normalsize
+
 \subsubsection{Repeatrar distrikt 3}
-\footnotesize
+
 \begin{longtable}{llllrrlcl}
 
 \textbf{Funktion} & \textbf{Typ}    & \textbf{Call}   & \textbf{QTH} & \textbf{Frekvens} & 
@@ -263,9 +261,9 @@ Repeater & D-Star & SK3JR    & Östersund        & 434.5625  & -2MHz    & DV Car
 Repeater & FM     & SK3JR/R2 & Ö-sund/Brattås.  & 145.7875  & -600KHz  & 127,3Hz       & QRV & JP73HC
 
 \end{longtable}
-\normalsize
+
 \subsubsection{Repeatrar distrikt 4}
-\footnotesize
+
 \begin{longtable}{llllrrlcl}
 
 \textbf{Funktion} & \textbf{Typ}    & \textbf{Call}   & \textbf{QTH} & \textbf{Frekvens} & 
@@ -378,9 +376,9 @@ Repeater & FM     & SM5USM/R & Vingåker          & 434.6750 & -2MHz   & Carrier
 Repeater & FM     & SK5RHQ   & Västerås          & 145.7750 & -600KHz & 1750/82,5Hz   & QRV  & JO89GO
 
 \end{longtable}
-\normalsize
+
 \subsubsection{Repeatrar distrikt 6}
-\footnotesize
+
 \begin{longtable}{llllrrlcl}
 
 \textbf{Funktion} & \textbf{Typ}    & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & 
@@ -487,9 +485,9 @@ Repeater & D-Star & SK6DZ-C  & Vårgårda            & 145.6625  & -600KHz & DV 
 Repeater & FM     & SK6DZ/R  & Vårgårda            & 434.8500  & -2MHz   & 118,8Hz         & QRV  & JO68JA
 
 \end{longtable}
-\normalsize
+
 \subsubsection{Repeatrar distrikt 7}
-\footnotesize
+
 \begin{longtable}{llllrrlcl}
 
 \textbf{Funktion} & \textbf{Typ} & \textbf{Call} & \textbf{QTH} & \textbf{Frekvens} & \textbf{Skift} & 
@@ -569,8 +567,5 @@ Repeater & D-Star & SK7HW-B  & Växjö               & 434.7000  & -2MHz   & DV 
 
 \end{longtable}
 \normalsize
-
-\end{landscape}
-
 \clearpage
 
