--- a/init-vhf.tex
+++ b/init-vhf.tex
@@ -143,7 +143,7 @@
 	
 	Det du nu håller i din hand eller läser på din skärm är resultatet av en omarbetning av den tidigare radiohandboken. Denna version kommer sig av att det var dags att uppdatera layouten och även passa på att städa upp lite i boken så att den blev lite mer strukturerad.
 	
-	Denna del innehåller VHF/UHF men inte HF.
+	Denna del innehåller VHF/UHF men inte HF. Boken finns i två andra delar, en som innehåller HF men inte VHF/UHF och en som innehåller båda sektionerna.
 	
 	De tidigare versionerna särskilt tänkta att läsas på platta, ebokläsare eller mobil har utgått. Detta för att de inte var särskilt populära eller ofta nedladdade liksom att det tar en del tid i anspråk att underhålla flera olikva versioner av samma material. Eftersom sidstorleken för läs- och surfplattor är bäst som A5 ungefär innebär det också en del problem med layout.
 	
