--- a/init-full.tex
+++ b/init-full.tex
@@ -143,7 +143,7 @@
 
 Det du nu håller i din hand eller läser på din skärm är resultatet av en omarbetning av den tidigare radiohandboken. Denna version kommer sig av att det var dags att uppdatera layouten och även passa på att städa upp lite i boken så att den blev lite mer strukturerad.
 
-Denna del innehåller både HF, samt VHF/UHF.
+Denna del innehåller både HF, samt VHF/UHF, dvs hela boken. Den finns också i två varianter, en bara med HF samt en med VHF/UHF. De generella delarna är exakt samma i båda men de specifika för respektive frekvensområde är borttaget för att göra en kortare variant för den som inte behöver hela boken.
 
 De tidigare versionerna särskilt tänkta att läsas på platta, ebokläsare eller mobil har utgått. Detta för att de inte var särskilt populära eller ofta nedladdade liksom att det tar en del tid i anspråk att underhålla flera olikva versioner av samma material. Eftersom sidstorleken för läs- och surfplattor är bäst som A5 ungefär innebär det också en del problem med layout.
 
