--- a/init-full.tex
+++ b/init-full.tex
@@ -5,7 +5,7 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SMØUEI}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{2.0.0}
+\newcommand{\DokVersion}{RC-2.0.0}
 \newcommand{\DokumentRevision}{x.y.z}
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
