--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -76,7 +76,11 @@ Observera att kanalnumren som är traditionella och frekvenserna inte kommer hel
 
 \subsubsection{Öppna PMR-bandet på 446\,MHz}
 
-I nya författningssamlingen står det uttrycklingen att repeateranvändning är förbjuden. De exakta kanalerna har också inte heller bestämts utan bandet är upplåtet 446,0--446,2\,MHz. Traditionellt används nedanstående kanaler. Max effekt är 500\,mW och antennen får ej vara av löstagbar sort. Utrustningen skall vara godkänd för ändamålet.
+I nya författningssamlingen står det uttryckligen att repeateranvändning är 
+förbjuden. De exakta kanalerna har också inte heller bestämts utan bandet är 
+upplåtet 446,0--446,2\,MHz. Traditionellt används nedanstående kanaler. Max 
+effekt är 500\,mW och antennen får ej vara av löstagbar sort. Utrustningen 
+skall vara godkänd för ändamålet.
 
 Sedan sist har ytterligare spektrum tillförts och bandet har nu 16 kanaler. Det medges också digital PMR på alla frekvenserna men rekommendationen är att använda K1--K8 för analogt och K9--K16 för digitalt eftersom äldre apparater inte kan gå på de nya kanalerna medan alla digitala kan det.
 
@@ -468,7 +472,13 @@ tillfälliga signaler eller vara second operator åt med någon klubbsignal.
 
 Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år. Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar på söndagseftermiddagen.
 
-Sändningar under denna tid förekommer från ocertifierade scouter som lånar klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda sändaramatörer ut sina signaler. Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör men var beredd på att det kommer vara en viss ovana och ske en del misstag. Strunta i det och ge scouterna en kul radioupplevelse.
+Sändningar under denna tid förekommer från ocertifierade scouter som lånar 
+klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda 
+sändaramatörer ut sina signaler. 
+
+Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör 
+men var beredd på att det kommer vara en viss ovana och ske en del misstag. 
+Strunta i det och ge scouterna en kul radioupplevelse.
 
 \input{repeatrar-vhf.tex}
 
