Fixat förbättring i QSO

--- a/qso.tex
+++ b/qso.tex
@@ -54,7 +54,7 @@ Eller på engelska:
 
 \subsubsection{Pile-up}
 
-Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med "du som sänder från Florida" eller "VK7 kom igen" osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla.
+Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med ''du som sänder från Florida'' eller ''VK7 kom igen'' osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla igen. Stationer du hör signalen på kör du direkt.
 
 Direkt när det uppstår en pile-up är det effektivt att köra split. Dvs du lyssnar 5--10\,kHz upp eller ned från den frekvens du sänder på. Det gör det lättare för dig att behålla kommandot under pile-up. Ligger du och sänder i ett frekvensområde som är särskilt ägnat för DX är det smart att lägga Rx-frekvensen strax utanför. Det undviker att man stökar ned i DX-bandet.
 
