--- a/init-full.tex
+++ b/init-full.tex
@@ -5,8 +5,8 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SMØUEI}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{2.0.1}
-\newcommand{\DokumentRevision}{x.y.z}
+\newcommand{\DokVersion}{2.0.2}
+%\newcommand{\DokumentRevision}{x.y.z}
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
