--- a/body-vhf.tex
+++ b/body-vhf.tex
@@ -46,6 +46,8 @@ Nya kanaler är markerade i listan med asterisk och har fått nummer från kanal
 	           31,170 & Jakt 31*           &                   &   31,370          &                    &
 \end{longtable}
 
+\input{pr-bandet-69mhz}
+
 
 \subsubsection{Jakt och jordbruksfrekvenser 155\,MHz}
 
@@ -106,7 +108,6 @@ Endast smalbandig modulation med FM-deviation max 2.5 kHz skall användas för a
 \label{tab:pmr-frekvenser}
 \end{table}
 
-\clearpage
 \subsubsection{Kortdistansradio (KDR, SRBR)}
 
 Kallas även SRBR för Short Range Business Radio. 
