Rättade några felaktigheter

--- a/pr-bandet-69mhz.tex
+++ b/pr-bandet-69mhz.tex
@@ -14,7 +14,7 @@ Nackdelen som den delar med 27\,MHz är att många antenner för fordon är för
 
 På bandet kör man FM uteslutande och det rekommenderas att man skaffar en radio med signalstyrkemätare då man på FM inte kan höra lika väl om man är störd, däremot syns det ju på S-metern om man har störningar. Bandet lider något av störningar i urbana miljöer men på landsbygden brukar det vara tyst och fint.
 
-Användningen av bandet regleras i PTS föreskrift Undantag från Tillståndsplikt och innebär att man får använda max 25\,W ERP (dvs för en dipolantenn), max 10\% sändningscykel (dvs 6 min/timme), en kanalbredd om 12,5\,kHz (narrow FM) och det finns 8 stycken kanaler upplåtna för landmobil radio.
+Användningen av bandet regleras i PTS föreskrift Undantag från Tillståndsplikt och innebär att man får använda max 25\,W ERP (dvs för en dipolantenn), max 10\% sändningscykel (dvs 6 min/timme), en kanalbredd om 25\,kHz och det finns 8 stycken kanaler upplåtna för landmobil radio. I strikt mening är inte kommunikation bas-bas egentligen tillåten eftersom det är landmobil trafik som avses i PTS bestämmelser. Kanal 1 får enbart användas för mobil-mobil trafik inom Västra Götaland och Hallands län.
 
 \begin{table}[h]
   \centering
