Rättat fel angående anropssignaler issue #15

--- a/body.tex
+++ b/body.tex
@@ -99,7 +99,17 @@ Sverige delas in i följande distrikt efter sina län:
 \end{table}
 Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
 
-I de tidigare SMnXYZ-signalerna förekom amatörens bokstavskombination endast en gång, det kunde alltså inte finnas en SM4UEI och en SM0UEI, det vore i så fall samma amatör som flyttat. Med det nya systemet där SSA m.fl. utdelar signaler i stället för PTS i serien SAnXYZ kan SM4XYZ och SA7XYZ alltså vara två helt olika amatörer.
+En radioamatör kan byta sin distriktsiffra om den sänder från ett
+annat distrikt än sitt hemmavarande. Man kan också göra ett tillägg
+med /n där n är den siffra för det distrikt man befinner sig i. En
+stockholmsamatör som befinner sig i Gävleborgs län kan alltså antingen
+använda SM3UEI eller SM0UEI/3 även med tillägget M för mobil och P för
+portabel om man så önskar.
+
+Det unika för en radioamatörs signal är alltså prefixet + suffixet,
+som exempel är identifieraren för SM0UEI prefixet SM och suffixet UEI
+eftersom distriktsiffran kan ändra sig. 
+
 \section{Terminologi och trafik}
 
 \subsection{Bokstaveringsalfabetet (Svenska)}
