Fixade småfel och lade till versionsinfo på förstasidan.

--- a/init-full.tex
+++ b/init-full.tex
@@ -5,7 +5,7 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SMØUEI}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{2.0.1}
+\newcommand{\DokVersion}{2.0.2}
 \newcommand{\DokumentRevision}{x.y.z}
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -45,6 +45,8 @@
 \end{flushright}
 
 \vfill
+
+Version: \DokVersion\ \hfill SMØUEI \hfill Datum: \DokumentDatum
 
 %	\small
 %	\begin{tabular}{llll}
