--- a/qso.tex
+++ b/qso.tex
@@ -42,7 +42,7 @@ Eller på engelska:
 
 -- SA0MAD från SM0UEI, tack för svaret. Din signal är 59 hos mig, mitt QTH är JO89WA och namnet är Anders. SA0MAD från SM0UEI kom.
 
--- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mi i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SA0MAD.
+-- SM0UEI från SA0MAD, tack för rapporten. Din signal är 57 hos mig, jag befinner mig i JO89VK men kommer under kvällen byta QTH. Jag kommer då vara QRV på 3663 kHz. QSL? SM0UEI från SA0MAD.
 
 -- SA0MAD från SM0UEI, QSL på det, QRX 19.30 på frekvens 3663 kHz. 
 
