--- a/init-hf.tex
+++ b/init-hf.tex
@@ -5,7 +5,7 @@
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
 \newcommand{\Initialer}{SMØUEI}
 \newcommand{\DokYear}{19}
-\newcommand{\DokVersion}{RC-2.0.0-HF}
+\newcommand{\DokVersion}{2.1.1}
 \newcommand{\DokumentRevision}{x.y.z}
 \newcommand{\DokumentDatum}{\today}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
