Uppdateringar från SMØMPV om landsprefix och DXCC-entiteter

--- a/body.tex
+++ b/body.tex
@@ -4,48 +4,41 @@
 Här är inte alla länder med utan de vanligaste som körs från Sverige.
 
 \begin{center}
-\begin{longtable}{cl|cl}
-	   	\caption{Tabell över landsprefix}\\
-	   \textbf{Signal} & \textbf{Land}        & \textbf{Signal} & \textbf{Land}         \\ \hline
-	   \endfirsthead
-	\endhead
-              AMA--AOZ     & Spanien              & C3A--C3Z        & Andorra               \\
-	      C4A--C4Z     & Cypern               & DAA--DRZ        & Tyskland              \\
-	      EAA--EHZ     & Spanien              & EIA--EJZ        & Irland                \\
-	      EKA--EKZ     & Armenien             & EMA--EOZ        & Ukraina               \\
-	      EBA--ERZ     & Moldav.              & ESA--ESZ        & Estland               \\
-	      EUA--EWZ     & Vitryssland          & EXA--EXZ        & Ryssland              \\
-	      EYA--EYZ     & Tajikistan           & EZA--EZZ        & Turkmenistan          \\
-	      FAA--FZZ     & Frankrike            & GAA--GZZ        & Storbrittannien       \\
-	      HAA--HZZ     & Ungern               & HBA--HBZ        & Schweiz               \\
-	      HEA--HEZ     & Schweiz              & HFA--HFZ        & Polen                 \\
-	      HGA--HGZ     & Ungern               & HVA--HVZ        & Vatikanen             \\
-	      HWA--HYZ     & Frankrike            & H2A--H2Z        & Cypern                \\
-	      IAA--IZZ     & Italien              & JWA--JXZ        & Norge                 \\
-	      J4A--J4Z     & Grekland             & LAA--LNZ        & Norge                 \\
-	      LXA--LXZ     & Luxemburg            & LYA--LYZ        & Litauen               \\
-	      LZA--LZZ     & Bulgarien            & MAA--MZZ        & Storbrittannien       \\
-	      OEA--OEZ     & Österrike            & OFA--OJZ        & Finland               \\
-	      OKA--OLZ     & Tjeckiska republiken & OMA--OMZ        & Slovakiska republiken \\
-	      ONA--OTZ     & Belgien              & OUA--OZZ        & Danmark               \\
-	      PAA--PIZ     & Nederländerna        & P3A--P3Z        & Cypern                \\
-	      RAA--RZZ     & Ryska federationen   & SAA--SMZ        & Sverige               \\
-	      SNA--SRZ     & Polen                & TAA--TCZ        & Turkiet               \\
-	      TFA--TFZ     & Island               & THA--THZ        & Frankrike             \\
-	      TKA--TKZ     & Frankrikte           & TMA--TMZ        & Frankrike             \\
-	      TOA--TQZ     & Frankrike            & TVA--TXZ        & Frankrike             \\
-	      T9A--T9Z     & Bosnien-Herzegovina  & UAA--UIZ        & Ryska federationen    \\
-	      UJA--UMZ     & Uzbekistan           & UNA--UQZ        & Kazakstan             \\
-	       URA-UTZ     & Ukraina              & UUA--UZZ        & Ukraina               \\
-	      VPA--VSZ     & Storbritannien       & XPA--XPZ        & Danmark               \\
-	      XXA--XXZ     & Portugal             & YLA--YLZ        & Litauen               \\
-	      Y2A--Y9Z     & Tyskland             & ZBA--ZJZ        & Storbritannien        \\
-	      ZNA--ZOZ     & Storbritannien       & ZQA--ZQZ        & Storbritannien        \\
-	       2AA-2ZZ     & Storbritannien       & 3YA--3YZ        & Norge                 \\
-	      3ZA--3ZZ     & Polen                & 5BA--5BZ        & Cypern                \\
-	      5PA--5QZ     & Danmark              & 7SA--7SZ        & Sverige               \\
-	      8SA--8SZ     & Sverige              & 9AA--9AZ        & Kroatien
-\end{longtable}
+	\begin{footnotesize}
+		\begin{longtable}{lll}
+			\caption{Utvalda landsprefix} \\
+			\textbf{Land}                 & \textbf{DXCC}  & \textbf{Prefixserier}                             \\ \hline
+			Belgien                       & ON             & ONA--OTZ                                          \\
+			Canada                        & VE             & CYA--CZZ, VAA--VGZ, VOA--VOZ, VXA--VYZ, XJA--XOZ  \\
+			Frankrike                     & F              & FAA--FZZ, HWA--HWZ, THA--THZ, TKA--TKZ, TMA--TMZ, \\
+			                              &                & TOA--TQZ, TVA--TXZ                                \\
+			Frankr. särsk.                & FG FH FK       &                                                   \\
+			                              & FM, FO, FP, FR &                                                   \\
+			                              & FS, FT, FW, FY &                                                   \\
+			Förenta Staterna              & K              & AAA--ALZ, KAA--KZZ, NAA--NZZ, WAA--WZZ            \\
+			Grekland                      & SV             & J4A--J4Z, SVA--SVZ                                \\
+			Italien                       & I              & IAA--IZZ                                          \\
+			Japan                         & JA             & 7JA--7NZ, 8JA--8NZ, JAA--JSZ                      \\
+			Kroatien                      & 9A             & 9AA--9AZ                                          \\
+			Nederländerna                 & PA             & PAA--PLZ                                          \\
+			Polen                         & SP             & 3ZA--3ZZ, HFA--HFZ, SNA--SRZ                      \\
+			Rumänien                      & YO             & YOA--YRZ                                          \\
+			Ryssland (Eur.)               & UA1 3 4 5 6 7  & RAA--RZZ, UAA-UIZ                                 \\
+			Ryssland (Asi.)               & UA8 9 0        & RAA--RZZ, UAA-UIZ                                 \\
+			Schweiz                       & HB             & HBA--HBZ HEA--HEZ                                 \\
+			Spanien                       & EA             & AMA--AOZ, EAA--EHZ                                \\
+			Storbritt. England            & G, 2E, M       & 2AA--2ZZ, GAA--GZZ, MAA--MZZ, VPA--VQZ,           \\
+			                              &                & VSA--VSZ,ZBA--ZJZ, ZNA--ZOZ, ZQA--ZQZ             \\
+			Storbritt. Skottland          & GM, 2M, MM     &                                                   \\
+			Storbritt. Övrigt             & VP2, VP6, VP8  &                                                   \\
+			                              & VP9, VQ9, ZB   &                                                   \\
+			Sverige                       & SM             & 7SA--7SZ, 8SA--8SZ, SAA--SMZ                      \\
+			Tyskland                      & DL             & DAA--DRZ, Y2A--Y9Z                                \\
+			Ukraina                       & UT             & EMA--EOZ, URA--UZA                                \\
+			Ungern                        & HA             & HAA--HAZ, HGA--HGZ                                \\
+			Österrike                     & OE             & OEA--OEZ
+		\end{longtable}
+	\end{footnotesize}
 \end{center}
 
 \subsection{Svenska signaler}
@@ -55,10 +48,11 @@ Svenska signaler förekommer inom ett antal prefix. Enligt ITU disponerar Sverig
 Amatörradion använder ett antal signaler, de viktigaste är:
 
 \begin{tabular}{ll}
-	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i serien) \\
-	SA & Amatörradiosignal tilldelad av SSA, ESA eller FRO                     \\
-	SK & Klubbsignaler (som regel tvåställiga efter distriktsiffran)           \\
-	SL & Militära signaler (som regel tvåställiga efter distriktsiffran)
+	SM & Amatörradiosignal utdelad av PTS (nya signaler tilldelas ej i serien)               \\
+	SA & Amatörradiosignal tilldelad av SSA                                                  \\
+	SK & Klubbsignaler (som regel tvåställiga efter distriktsiffran)                         \\
+	   & numera tilldelas även klubbar SA-signaler som är tvåställiga efter distriktssiffran \\
+	SL & Militära signaler (som regel två- eller treställiga efter distriktsiffran)
 \end{tabular}
 
 Dessa signaler följs av en \textit{distriktsiffra} se särskilt avsnitt och sedan 2-ställiga eller 3-ställiga bokstavskombinationer som är den personliga signalen. Exempel är SM0UEI som är min egen signal, distriktsiffran är 0 dvs hemmavarande i Stockholms län. Ett annat exempel kan vara SK5JV tidigare Fagersta amatörradioklubb.
@@ -73,7 +67,7 @@ Som suffix används följande:
 	/M  & Mobil (rörlig) sändaramatör, även portabel \\
 	/MM & Mobil till sjöss (mobil maritime)          \\
 	/AM & Mobil i luften (aeromobile)                \\
-	/PM & Mobil portabel (ej officiellt suffix)\\
+	/P  & Portabel (för stunden uppsatt station)     \\
 	/R  & Repeaterstation
 \end{tabular}
 
@@ -97,7 +91,12 @@ Sverige delas in i följande distrikt efter sina län:
 \end{tabular}
 \caption{Distriktssiffor i Sverige}
 \end{table}
-Distrikten förekommen som siffra i utdelade anropssignaler. Radioamatörer byter inte distriktsiffra under resa i annat distrikt, i stället används suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger man "SM0UEI mobilt i SM3-land" för att påvisa att man befinner sig utanför ordinarie distrikt.
+
+Distrikten förekommer som siffra i utdelade anropssignaler. Radioamatörer 
+byter inte distriktsiffra under resa i annat distrikt, i stället används 
+suffix (tillägg efter ordinarie signal) som t.ex. /M för mobil. Ofta uppger 
+man "SM0UEI mobilt i SM3-land" (SM0UEI/3/M) ibland (SM0UEI/3M) för att 
+påvisa att man befinner sig utanför ordinarie distrikt.
 
 En radioamatör kan byta sin distriktsiffra om den sänder från ett
 annat distrikt än sitt hemmavarande. Man kan också göra ett tillägg
