--- a/qso.tex
+++ b/qso.tex
@@ -18,13 +18,11 @@ När man kör FM över repeatrar på VHF/UHF är det inte lika vanligt att man b
 
 Ett anrop kan se ut ungefär såhär:
 
--- SA0MAD från SM0UEI, SA0MAD kom!
-
-Här är det SA0MAD som anropas av SM0UEI. 
-
-Svaret kan se ut ungefär såhär:
-
--- SM0UEI från SA0MAD kom!
+\begin{tabular}{ll}
+	Station & Meddelande                            \\ \hline
+	SMØUEI  & SAØMAD från SMØUEI, SAØMAD kom.       \\
+	SAØMAD  & SMØUEI från SAØMAD, jag lyssnar, kom.
+\end{tabular}
 
 Därefter övergår radiosamtalet i dialog eller meddelandesändning.
 
@@ -52,7 +50,7 @@ Eller på engelska:
 
 -- SM0UEI från SA0MAD, 73 tillbaka, klart slut.
 
-\subsubsection{Pile-up}
+\subsubsection{Pile-up och tävling}
 
 Ibland kan det bli väldigt många motstationer samtidigt som ropar. Nu gäller det att spetsa öronen! Först gäller det att sålla. Rara signaler från långtbortistan ger mer poäng i en contest som regel eller från länder du inte kört osv beroende på regler. Försök att sålla med ''du som sänder från Florida'' eller ''VK7 kom igen'' osv till det är en station kvar. Kör den snabbt, ropa CQ igen och börja sålla igen. Stationer du hör signalen på kör du direkt.
 
@@ -62,14 +60,31 @@ Kör du split skall du säga det efter varje sändning. "CQ CQ CQ de Sierra Mike
 
 Kör korta QSO. Utbyt snabbt den information som behövs och ta sedan nästa. Ha förståelse för att det kan bli krockar i en pile-up. När du hör en partiell signal eller station du vill prata med håll fast vid den. Om du har svårt att läsa den be den repetera tills ni är klara. Genom att du är auktoriteten på frekvensen kommer pile-up:en att lugna ned sig och vänta på sin tur. Om du ''hattar omkring'' är risken att all radiodisciplin far ut genom fönstret.
 
-Använd ett standardmönster när du kör:
+Ofta är det 1 kHz upp som gäller vid CW och digitala trafiksätt.
+Du vill försöka få tag i Södra Shetlandsöarna, ett mycket ovanligt DX, som har en stor pile up och ropar på 14.195 MHz
 
--- SM0UEI CQ CQ CQ de SM0UEI 10 UP
+\begin{tabular}{lrl}
+	Station & Frekvens & Meddelande                     \\ \hline
+	VP8SSI  &   14.195 & QRZ VP8SSI  5 to 15 UP         \\
+	SMØUEI  &   14.203 & SM0UEI                         \\
+	VP8SSI  &   14.195 & SM0UEI 59                      \\
+	SMØUEI  &   14.203 & 59 thank you                   \\
+	VP8SSI  &   14.195 & Thanks. QRZ VP8SSI 5 to 15 up.
+\end{tabular}
 
--- SM0UEI de ON3XYZ you are 59 sequence 122, QSL?
+Du kommer troligtvis att behöva upprepa din anropssignal flera gånger, men lyssna efter varje gång du ropat så att du hör vem han svarar. Svarar han inte dig så får du vänta tills han ropar något som indikerar att han avslutat kontakten. Exempelvis: Thanks, VP8SSI eller VP8SSI 5 to 15 up.
 
--- ON3XYZ SM0UEI QSL, 59 back to you, sequence 312 QSL?
+Du deltar i en tävling där man skall ange singnalrapport och löpnumret från start av tävlingenpå den kontakt du har. Du har hitintills kontaktat 30 stationer i tävlingen. Du har hittat en ledig frekvens och ropar CQ.
 
--- QSL. CQ CQ CQ de SM0UEI 10 UP ...
+\begin{tabular}{ll}
+	Station & Meddelande                       \\ \hline
+	SMØUEI  & CQ contest SM0UEI SM0UEI contest \\
+	ON3XYZ  & ON3XYZ                           \\
+	SMØUEI  & ON3XYZ you are 59 031            \\
+	ON3XYZ  & Thanks 031 you are 59 044        \\
+	SMØUEI  & 44 Thanks. QRZ SM0UEI
+\end{tabular}
+
+Notera att både när man jagar DX och när man deltar i tävlingar så ger man och får man signalrapporten 59 om man kör foni och 599 telegrafi åtminstone i internationella tävlingar för att minska risken för fel. Får du en annan signalrapport än 59 eller 599 i en tävling så är det viktigt du anger korrekt i din logg. I mer lokala tester som NAC och SAC förekommer det att man ger korrekta signalrapporter, alltså efter hur väl man hörs.
 
 Om du försöker nå en motstation med pile-up var uppmärksam på dennes sändningar och vänta på din tur. Tala gärna om signal och var du sänder från men släpp sedan fram andra. Tänk på hur du själv skulle vilja att en pile-up på din egen station skulle vilja agera. Den gyllene regeln är också alltid lyssna först --- sänd sedan!
