Mindre uppdateringar från SM0MPV

--- a/qso.tex
+++ b/qso.tex
@@ -34,7 +34,7 @@ Används när man inte ropar på någon särskild motstation utan önskar samtal
 
 Eller på engelska:
 
--- CQ CQ CQ this is SM0UEI calling CQ CQ CQ and standing by.
+-- CQ CQ CQ this is SMØUEI calling CQ CQ CQ and standing by.
 
 \subsubsection{Meddelandesändning}
 
