Cleanups in progress

--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -42,8 +42,9 @@
 %\SetWatermarkScale{.7}
 %\SetWatermarkLightness{.7}
 
+\input{init-1st}
 
-\input{init-full}
+\input{rhb-forord-full}
 
 \input{body}
 
