--- a/rhb-hf.tex
+++ b/rhb-hf.tex
@@ -45,14 +45,9 @@
 
 
 \begin{document}
-
-	
-	\input{init-hf}
-	
+	\include{init-1st}
+	\input{rhb-forord-hf}
 	\input{body}
-	
 	\input{body-hf}
-	
 	%\input{logbook}
-
 \end{document}
