--- a/rhb-vhf.tex
+++ b/rhb-vhf.tex
@@ -43,14 +43,9 @@
 %\SetWatermarkLightness{.7}
 
 
-\input{init-vhf}
-
+\input{init-1st}
+\input{rhb-forord-vhf.tex}
 \input{body}
-
 \input{body-vhf}
-
-%\input{body-hf}
-
 %\input{logbook}
-
 \end{document}
