--- a/init-1st.tex
+++ b/init-1st.tex
@@ -11,3 +11,31 @@
 
 \renewcommand{\arraystretch}{1.15}
 
+\documentclass[10pt,swedish,a4paper]{article}
+\usepackage[a4paper,bindingoffset=1cm]{geometry}
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage[swedish]{babel}
+\usepackage[colorlinks,linkcolor=black,urlcolor=blue]{hyperref}
+\usepackage{enumitem}
+\usepackage{multirow}
+\usepackage{amsmath}
+\usepackage{tabularx}
+\usepackage{graphicx}
+\usepackage[table,x11names]{xcolor}
+\usepackage{fancyhdr}
+\usepackage[yyyymmdd]{datetime} \renewcommand{\dateseparator}{-}
+\usepackage{lastpage}
+\usepackage{newpxtext,newpxmath}
+\usepackage{pdfpages}
+\usepackage{icomma}
+\usepackage{pdflscape}
+\usepackage{wrapfig}
+\usepackage{float}
+\usepackage[bottom]{footmisc}
+\usepackage{longtable}
+\newif\iftitlefoot
+\raggedbottom
+\setlist{nosep}
+\usepackage{todonotes}
+\raggedbottom
