--- a/repeatrar-vhf.tex
+++ b/repeatrar-vhf.tex
@@ -1,38 +1,51 @@
 \scriptsize
 \subsection{Repeatrar, länkar och fyrar VHF/UHF}
 \subsubsection{Svenska fyrar VHF/UHF}
-\begin{longtable}{rlrllrrrc}
-\textbf{Signal} & \textbf{QTH}  & \textbf{Frekvens} & \textbf{Status} & \textbf{Lokator} & 
-\textbf{Masl}   & \textbf{Magl} & \textbf{Effekt}   & \textbf{Ritktning} \\ \hline
-
-SK4MPI  & Borlänge           & 144.4120  & QRV & JP70NJ & 520 & 10 & 200    & NV+NO    \\
-SK7MHH  & Färjestaden        & 432.4400  & QRV & JO86GP & 45  & 15 &        &          \\
-SK4BX/B & Garphyttan/Storst. & 432.4600  & QRV & JO79LH & 270 & 10 & 50     & NESW     \\
-SK4BX/B & Garp./Ånnaboda     & 1296.9600 & QRV & JO79LI & 270 & 10 &        &          \\
-SK4BX/B & Garp./Ånnaboda     & 2320.9600 & QRT & JO79LI & 270 & 10 &        &          \\
-SK6MHI  & Göteborg           & 2320.8000 & QRV & JO57XQ & 135 & 40 & 150    & Omni     \\
-SK6MHI  & Hönö               & 1296.8000 & QRV & JO57TQ & 40  & 30 & 30     & Omni     \\
-SK2VHG  & Kiruna/Esrange     & 144.4350  & QRT & KP07MU & 630 &    &        & S        \\
-SK2CP/B & Kiruna/Esrange     & 50.0520   & QRV & KP07MU & 630 &    & 30     & Omni     \\
-SK1UHF  & Klintehamn         & 432.4050  & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
-SK1VHF  & Klintehamn         & 144.4470  & QRV & JO97CJ & 65  & 60 & 10     & Omni     \\
-SK1UHG  & Klintehamn         & 1296.9500 & QRV & JO97CJ & 65  & 60 & 30     & Omni     \\
-SK6QW/B & Mariestad          & 50.0600   & QRV & JO68WR &     & 8  & 8      & Omni     \\
-SK3UHF  & Nordingrå/Rävsön   & 432.4550  & QRV & JP92FW & 200 & 8  & 50     & Omni     \\
-SK3UHG  & Nordingrå/Rävsön   & 1296.8550 & QRV & JP92FW & 200 & 10 & 30     & Omni     \\
-SK3UHH  & Nordingrå/Rävsön   & 2320.9000 & QRV & JP92FW & 200 & 5  &        & 220 deg. \\
-SK7VHF  & Sjöbo              & 144.4610  & QRV & JO65UQ & 25  & 25 & 10     & Omni     \\
-SK6VHF  & Tjörn Island       & 144.4480  & QRV & JO57TX & 120 & 12 & 10     & Omni     \\
-SK6UHI  & Tjörn Island       & 1296.8050 & QRV & JO57TX & 125 & 18 & 30     & Omni     \\
-SK6UHF  & Varberg/Veddige    & 432.4120  & QRV & JO67EH & 175 & 25 & 10     & Omni     \\
-SK2VHF  & Vindeln/Bub.       & 144.4570  & QRV & JP94TF & 300 & 10 & 80     & N+SV     \\
-SKØEN/B & Väddö              & 1296.8350 & QRV & JO99JX & 70  & 40 & 4      & Omni     \\
-SK2SHF  & Vännäs/Granlundsb. & 2320.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
-SK2SHF  & Vännäs/Granlundsb. & 1296.9850 & QRV & JP93VU & 250 & 50 & 10 / 5 &          \\
-SK7GH/B & Värnamo            & 28.2980   & QRV & JO77BF & 230 & 10 & 5      & Omni     \\
-SK3SIX  & Östersund          & 50.0700   & QRV & JP73HC & 470 & 7  & 10     & Omni     \\
-
+\begin{longtable}{llrlrrrlrll}
+	Signal   & Placering           &   Frekvens & Loc    &    P & MASL & MAGL & Dir     &  Band & Mode   & Dist \\ \hline
+	SKØCT/B  & Stockholm           &  5760.9030 & JO99JX &   80 &   60 &   30 & Omni    &   6cm & CW     & 0    \\
+	SKØEN/B  & Väddö               & 10368.8470 & JO99JX & 1000 &   60 &   30 & Omni    &  23cm & CW     & 0    \\
+	SKØEN/B  & Väddö               &  1296.8350 & JO99JX &    4 &   70 &   40 & Omni    &  23cm & CW     & 0    \\
+	SKØCT/B  & Stockholm           & 10368.8400 & JO89XJ &  0.1 &   50 &   20 & Omni    &   3cm & CW     & 0    \\
+	SK1UHF   & Klintehamn          &   432.4050 & JO97CJ &   30 &   65 &   60 & Omni    &  70cm & CW     & 1    \\
+	SK1VHF   & Klintehamn          &   144.4470 & JO97CJ &   10 &   65 &   60 & Omni    &    2m & CW     & 1    \\
+	SK1UHG   & Klintehamn          &  1296.9500 & JO97CJ &   30 &   65 &   60 & Omni    &  23cm & CW     & 1    \\
+	SK1SHH   & Klintehamn          & 10368.8500 & JO97CJ &    3 &   52 &   52 & Omni    &   3cm & CW     & 1    \\
+	SK2VHF   & Vindeln/Buberget    &   144.4570 & JP94TF &   80 &  300 &   10 & N+SV    &    2m & CW     & 2    \\
+	SK2CP/B  & Kiruna/Esrange      &    50.0520 & KP07MU &   30 &  630 &      & Omni    &    6m & CW     & 2    \\
+	SK2SHF   & Vännäs/Granl.b.     &  1296.9850 & JP93VU &   10 &  250 &   50 &         &  23cm & CW     & 2    \\
+	SK2SHF   & Vännäs/Granl.b.     &  2320.9850 & JP93VU &   10 &  250 &   50 &         &  13cm & CW     & 2    \\
+	SK2DR/B  & Råneå               &  1296.9370 & KP15EU &   14 &      &      & South   &  23cm & CW     & 2    \\
+	SK2DR/B  & Råneå               & 10368.8200 & KP15EU &    4 &      &      & South   &   3cm & CW     & 2    \\
+	SK3UHH   & Nordingrå/Rävsön    &  2320.9000 & JP92FW &      &  200 &    5 & 220°    &  13cm & CW     & 3    \\
+	SK3UHF   & Nordingrå/Rävsön    &   432.4550 & JP92FW &   50 &  200 &    8 & Omni    &  70cm & CW     & 3    \\
+	SK3UHG   & Nordingrå/Rävsön    &  1296.8550 & JP92FW &   30 &  200 &   10 & Omni    &  23cm & CW     & 3    \\
+	SK3SIX   & Östersund           &    50.4680 & JP73HC &   15 &  480 &    7 & Omni    &    6m & CW     & 3    \\
+	SK3VHF   & Östersund           &   144.4210 & JP73HC &   50 &  480 &    7 & 180°    &    2m & CW     & 3    \\
+	SM3KDR   & Krokom/Aspås        &    28.2860 & JP73GI &    1 &  380 &    5 & E-W     &   10m & CW     & 3    \\
+	SK4BX/B  & Garphyttan/Ånnaboda & 10368.9600 & JO79LI &      &  270 &   10 &         &   3cm & CW     & 4    \\
+	SK4MPI   & Borlänge            &   144.4120 & JP70PI &  200 &  380 &   20 & NV+NO   &   2cm & PI4/CW & 4    \\
+	SK4BX/B  & Garphyttan/Storst.  &   432.4600 & JO79LH &   50 &  270 &   10 & N E S W &  70cm & CW     & 4    \\
+	SK4BX/B  & Garphyttan/Ånnab.   &  1296.9600 & JO79LI &      &  270 &   10 &         &  23cm & CW     & 4    \\
+	SK6YH/B  & Göteborg            & 10368.8080 & JO57XQ & 1000 &  135 &   40 & 184°    &   3cm & CW     & 6    \\
+	SK6MHI   & Hönö                &  1296.8000 & JO57TQ &   30 &   40 &   30 & Omni    &  23cm & CW     & 6    \\
+	SK6MHI   & Göteborg            &  5760.8000 & JO57XQ &   10 &  135 &   40 & Omni    &   6cm & CW     & 6    \\
+	SK6UHF   & Varberg/Veddige     &   432.4120 & JO67EH &   10 &  175 &   25 & Omni    &  70cm & CW     & 6    \\
+	SK6SHG   & Tjörn Island        & 24048.8830 & JO57TX & 2x1W &  118 &    8 & N / S   & 1.5cm & CW     & 6    \\
+	SK6MHI   & Göteborg            & 24048.8000 & JO57XQ &   10 &  135 &   40 & Omni    & 1.5cm & CW     & 6    \\
+	SK6UHI   & Tjörn Island        &  1296.8050 & JO57TX &   30 &  128 &   18 & Omni    &  23cm & CW     & 6    \\
+	SK6VHF   & Tjörn Island        &   144.4060 & JO57TX &   10 &  122 &   12 & Omni    &    2m & CW     & 6    \\
+	SK6WW/B  & Karlsborg/Vaberget  & 10368.8350 & JO78FM &    7 &  240 &   20 & Omni    &   3cm & CW     & 6    \\
+	SK6EI/B  & Skövde              &    50.4600 & JO68VJ &   10 &  300 &   30 & South   &    6m & CW     & 6    \\
+	SM7DTE/B & Gärsnäs             &  5760.8410 & JO75DN &   40 &   86 &    8 & Omni    &   6cm & CW     & 7    \\
+	SM7DTE/B & Gärsnäs             & 10368.8410 & JO75DN &   40 &   86 &    8 & Omni    &   3cm & CW     & 7    \\
+	SM7DTE/B & Gärsnäs             & 24048.8430 & JO75DN &   70 &   86 &    8 & Omni    & 1.5cm & CW     & 7    \\
+	SK7GH/B  & Värnamo             &    28.2980 & JO77BF &    5 &  230 &   10 & Omni    &   10m & CW     & 7    \\
+	SK7VHF   & Sjöbo               &   144.4610 & JO65UQ &   10 &   25 &   25 & Omni    &    2m & CW     & 7    \\
+	SK7GH/B  & Värnamo             &  1296.8250 & JO77AE &   10 &  230 &   10 & Omni    &  23cm & CW     & 7
 \end{longtable}
+
+
 
 \subsubsection{Svenska fyrar SHF}
 \begin{longtable}{rlrllrrrc}
