Mindre uppdatering i bandplanen för HF

--- a/bandplan-hf.tex
+++ b/bandplan-hf.tex
@@ -46,6 +46,17 @@ Alla frekvenser i kHz, bandbredder i Hz.
 3775 & 3800 & 2700 & Alla moder     & Interkontinental DX-trafik prioritet \\ \hline
 \end{tabular}
 
+
+\subsubsection{Bandplan 60\,m, 5351\,5--5366,5\,kHz}
+\begin{tabular}{rrrll}
+\multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
+5351\,5 & 5354\,0 &  200 & CW, Digimoder      & OBS! Högsta utstrålad effekt 15 W EIRP\\
+        &         &      &                    & i 60\,m-bandet\\ \hline
+5354\,0 & 5366\,0 & 2700 & Alla sändningsslag & USB rekommenderas för SSB\\ \hline
+5366\,0 & 5366\,5 &   20 & Smalbandsmoder     & För extrema smalbandsmoder,\\
+        &         &      &                    & max 20 Hz bandbredd\\ \hline
+\end{tabular}
+
 \subsubsection{Bandplan 40\,m, 7000--7200\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
@@ -61,7 +72,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 7175 & 7200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 30 m, 10\,100--10\,150 kHz}
+\subsubsection{Bandplan 30\,m, 10\,100--10\,150 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 10\,100 & 10\,140 & 200 & CW       & CW exkl. Max 150 Watt på 30 m           \\
@@ -69,7 +80,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 20 m, 14\,000--14\,350 kHz}
+\subsubsection{Bandplan 20\,m, 14\,000--14\,350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                             \\
@@ -98,7 +109,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 18\,160              \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 15 m, 21\,000--21\,450 kHz}
+\subsubsection{Bandplan 15\,m, 21\,000--21\,450 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -112,7 +123,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 21\,360                            \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 12 m, 24\,890--24\,990 kHz}
+\subsubsection{Bandplan 12\,m, 24\,890--24\,990 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 24\,890 & 24\,915 & 200  & CW         & Exklusivt CW, QRP 24\,906                             \\ \hline
@@ -122,7 +133,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
        &        &      &            & SSB QRP 24\,950, DV 24,960                            \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 10 m, 28\,000-29\,700 kHz}
+\subsubsection{Bandplan 10\,m, 28\,000-29\,700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 28\,000 & 28\,070 & 200  & CW         & Exklusivt CW, QRS 28\,055, CW QRP 28\,060              \\ \hline
