Fixade ett fel som dubblerade förstasidan

--- a/init-1st.tex
+++ b/init-1st.tex
@@ -1,4 +1,5 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% diverse saker här som används i dokumentet
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\TitleText}{Radiohandbok}
 \newcommand{\SubtitleText}{För Sändaramatörer\\ och Privatradioanvändare}
 \newcommand{\Forfattare}{Täpp-Anders Sikvall}
@@ -6,8 +7,8 @@
 \newcommand{\DokYear}{19}
 \newcommand{\DokVersion}{2.2.0}
 \newcommand{\DokumentRevision}{x.y.z}
-\newcommand{\DokumentDatum}{\today}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\newcommand{\DokumentDatum}{2023-11-26}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \renewcommand{\arraystretch}{1.15}
 
