--- a/rhb-forord.tex
+++ b/rhb-forord.tex
@@ -6,12 +6,12 @@
 \vspace*{4cm}
 \centerline{\includegraphics[width=\paperwidth]{logo/rubrikbild}}
 \begin{flushright}
-\Huge{\bfseries{\TitleText} HF/VHF/UHF} \\[3mm]
-\Large{\bfseries{\SubtitleText}}
+	\Huge{\bfseries{\TitleText} HF/VHF/UHF} \\[3mm]
+	\Large{\bfseries{\SubtitleText}}
 \end{flushright}
 
 \vfill
-
+	
 Version: \DokVersion\ \hfill SMØUEI \hfill Datum: \DokumentDatum
 
 \newpage
@@ -21,24 +21,24 @@ Version: \DokVersion\ \hfill SMØUEI \hfill Datum: \DokumentDatum
 \pagestyle{fancy}
 \lhead{\leftmark}
 \rhead{
-\scriptsize
-\begin{tabular}{ll}
-\textbf{Version} & \textbf{Datum}\\
-\ \DokVersion & \DokumentDatum\\
-\end{tabular}
+	\scriptsize
+	\begin{tabular}{ll}
+		\textbf{Version} & \textbf{Datum}\\
+		\ \DokVersion & \DokumentDatum\\
+	\end{tabular}
 }
 
 \chead{}
 
 \lfoot{
-\scriptsize
-www.sm0uei.se
+	\scriptsize
+	www.sm0uei.se
 }
 
 \cfoot{\scriptsize \thepage\ / \pageref{LastPage}}
 
 \rfoot{\scriptsize
-anders@sikvall.se
+	anders@sikvall.se
 }
 
 \renewcommand{\footrulewidth}{0.2pt}
@@ -59,39 +59,48 @@ anders@sikvall.se
 \setlength{\parindent}{0pt}
 
 \section*{Förord}
+	
+Detta är den uppdaterade utgåvan för november 2023. Det var ett tag
+sedan som jag ägnade mig åt det här alstret och det har kommit in lite
+påpekanden om rättningar och att repeaterlistor med mera varit ganska
+utdaterade. Det är förstås helt riktigt och jag har i skrivande stund
+faktiskt försökt få in den färskaste informationen som finns från SSA.
 
-Det du nu håller i din hand eller läser på din skärm är resultatet av
-en omarbetning av den tidigare radiohandboken. Denna version kommer
-sig av att det var dags att uppdatera layouten och även passa på att
-städa upp lite i boken så att den blev lite mer strukturerad.
+Mycket har hänt sedan föregående information. Jag har flyttat från
+Stockholm och har numera blivit SM5UEI men hänger fortfarande på
+Kvarnbergets amatörradioklubb på torsdagskvällarna så där är det öppet
+hus dessa dagar från kl. 19:00 när ni alla är välkomna att kika förbi.
 
-Denna del innehåller både HF, samt VHF/UHF, dvs hela boken. Den finns
-också i två varianter, en bara med HF samt en med VHF/UHF. De
-generella delarna är exakt samma i båda men de specifika för
-respektive frekvensområde är borttaget för att göra en kortare variant
-för den som inte behöver hela boken.
+Ändringar som skett sedan förra utgåvan:
 
-De tidigare versionerna särskilt tänkta att läsas på platta,
-ebokläsare eller mobil har utgått. Detta för att de inte var särskilt
-populära eller ofta nedladdade liksom att det tar en del tid i anspråk
-att underhålla flera olikva versioner av samma material. Eftersom
-sidstorleken för läs- och surfplattor är bäst som A5 ungefär innebär
-det också en del problem med layout.
+\begin{itemize}[]
+	\item Landsprefixdelen har kortats av och delats upp lite enligt 
+	input från SMØMPV.
+	\item Bandplanerna har setts över, bl.a. 60\,m-bandet i HF-delen 
+	har lagts till då det saknades tidigare.
+	\item Repeaterlistan uppdaterad med senaste data från SSA
+	\item Gjort om några exempel-QSO enligt tips från SMØMPV
+	\item En hel hoper med uppsnyggningar och förbättringar här och där.
+\end{itemize}
 
-Hur som helst hoppas jag att ni ska tycka att denna version innehåller
-mycket matnyttigt. Som vanligt är det bara att maila era synpunkter
-till anders@sikvall.se så kan vi se om vi kan uppdatera dessa till
-kommande versioner.
+Bidrag till handboken tas tacksamt mot men jag kommer bedöma ifall
+materialet är lämpligt att ta med.  Hela materialet finns numera också
+på Github om man vill gräva i det och fixa-dona, komma med 
+förbättrings\-förslag och annat kul så finns den på följande länk:
 
-Bidrag till boken tas tacksamt mot men jag kommer bedöma ifall
-materialet är lämpligt att ta med. I denna utgåva har även PTS
-bandplaner bedömts som överflödigt material eftersom vi ändå uppnått
-ganska många sidor med det viktigaste materialet. PTS bandplan
-återfinns ändå på deras hemsida.
+\href{https://github.com/sikvall/rhb/}{https://github.com/sikvall/rhb}
 
-Och kör radio där ute. Mobilt. Stabilt. Med stil.\\[4em]
+Har ni en massa bra förslag på grejer som ni skulle vilja ha med i boken
+så låt mig veta det där, det går också om ni vill arbeta in ändringar direkt
+och skicka mig en s.k. "pull request" så kan jag kika på det. Det går också
+att logga issues om man hittar fel.
 
-Karlholm, \today\\
-\textit{Täpp-Anders Sikvall}
+Och kör radio där ute. Mobilt. Stabilt. Maritimt. Aeromobilt. Alltid med
+stil.\\[4em]
+
+Karlholm, \DokumentDatum\\
+\textit{Täpp-Anders Sikvall\\
+	SM5UEI}
 
 \clearpage
+	
