--- a/init-1st.tex
+++ b/init-1st.tex
@@ -27,7 +27,7 @@
 \usepackage{fancyhdr}
 \usepackage[yyyymmdd]{datetime} \renewcommand{\dateseparator}{-}
 \usepackage{lastpage}
-\usepackage{newpxtext,newpxmath}
+%\usepackage{newpxtext,newpxmath}
 \usepackage{pdfpages}
 \usepackage{icomma}
 \usepackage{pdflscape}
@@ -35,6 +35,7 @@
 \usepackage{float}
 \usepackage[bottom]{footmisc}
 \usepackage{longtable}
+\usepackage{fbb}
 \newif\iftitlefoot
 \raggedbottom
 \setlist{nosep}
