--- a/body.tex
+++ b/body.tex
@@ -36,7 +36,7 @@ Här är inte alla länder med utan de vanligaste som körs från Sverige.
 			Tyskland                      & DL             & DAA--DRZ, Y2A--Y9Z                                \\
 			Ukraina                       & UT             & EMA--EOZ, URA--UZA                                \\
 			Ungern                        & HA             & HAA--HAZ, HGA--HGZ                                \\
-			Österrike                     & OE             & OEA--OEZ
+			Österrike                     & OE             & OEA--OEZ\\
 		\end{longtable}
 	\end{footnotesize}
 \end{center}
